Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-33786

Orca reads model columns instead of rows when navigating through items in QListView

    XMLWordPrintable

Details

    • 50
    • cd00ce4be (dev), 4693d7c61 (6.7)

    Description

      Hi,

      I'm using Qt 4.8 with qt-at-spi2. When working with Model/Viewer I can't get orca to read rows properly. My model has more then one column (for example, I have some user role data that I use in QSortFilterProxyModel for filtering/sorting etc). When I use QListView (which displays only 1 visible text column) to display my data and try navigating with keyboard through it (up-down) it will read column by column in sequence instead of jumping to next row.
      For example: I have 3 columns (name, email, date) and multiple rows (entries) in my model. QListView is displaying only names. When I select first name (let's say Mike), orca will read it. When I select second available name (second row, let's say John), orca will read Mike's email, when I select next available name (third row), orca will read Mike's date, when I select next available row, orca will say John's name and so on.
      Changing roles in column data doesn't help. If role is other then Qt::DisplayRole orca won't read it, but it won't skip it either. This all works well when QTreeView is used, I only experienced this problem with QListView. For quick concept proof I used basicsortfilter model example and change it to use QListView. Please find it attached in this ticket.

      Expected behavior:
      Orca should read selected item in QListView.

      Actual behavior:
      Orca doesn't read selected item properly if model has multiple columns.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            frederik Frederik Gladhorn
            dreamerns Nikola Novakovic
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes